feat: update to 9.4
Signed-off-by: Han Gao <gaohan@iscas.ac.cn>